k8s/frontend-destillapp.yaml
# k8s/07-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: destillapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:                                           # ← add spec:
      containers:
      - name: frontend
        image: 390442225778.dkr.ecr.eu-central-1.amazonaws.com/destillapp/k8s-uat/destill-frontend/destill-frontend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 100m
            memory: 128Mi

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: destillapp
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
  - port: 8080
    targetPort: 8080
