k8s/ingress-destillapp.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: destillapp-ingress
  namespace: destillapp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  ingressClassName: traefik
  rules:
  - host: destillapp.local
    http:
      paths:
      - path: /graphql
        pathType: Exact
        backend:
          service:
            name: backend
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: destillapp-backend-ingress
  namespace: destillapp
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.priority: "200"
    #traefik.ingress.kubernetes.io/router.rule: "Host(`destillapp.local`) && Path(`/graphql`)"
spec:
  ingressClassName: traefik
  rules:
  - host: destillapp.local
    http:
      paths:
      - path: /graphql
        pathType: Exact
        backend:
          service:
            name: backend
            port:
              number: 3000
